--- a/index.html
+++ b/index.html
@@ -3,48 +3,28 @@ layout: default
 title: Your New Jekyll Site
 ---
 
-<!-- div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div> -->
-
 <div class="container">
-
-<!--             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
- -->
-
 
 <!-- CAROUSEL -->
 <div class="carousel slide" data-ride="carousel">
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
-    <div class="item active">
-      <img src="/images/ALS_1282.jpg" class="img-responsive" alt="...">
-      <div class="carousel-caption">
-        <h4>THIS IS THE TITLE</h4>
-        <p>this is the description</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="/images/ALS_1495.jpg" class="img-responsive" alt="...">
-            <div class="carousel-caption">
-        <h4>THIS IS THE TITLE</h4>
-        <p>this is the description</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="/images/ALS_1565.jpg" class="img-responsive" alt="...">
-            <div class="carousel-caption">
-        <h4>THIS IS THE TITLE</h4>
-        <p>this is the description</p>
-      </div>
-    </div> 
+
+	{% for image in site.data.homeimages %}
+	    {% if forloop.index == 1 %}
+	    <div class="item active">
+	    {% else %}
+	    <div class="item">
+	    {% endif }%}
+	      <img src="/images/{{image.file}}" class="img-responsive" alt="">
+	      <div class="carousel-caption">
+	        <h4>{{image.title}}</h4>
+	        <p>{{image.desc}}</p>
+	      </div>
+	    </div>
+	{% endfor %}
+
   </div>
 
 </div>
@@ -59,7 +39,6 @@ title: Your New Jekyll Site
     </div>
   </div>
 {% endfor %}
-
 
 </div>
 
