--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ title: Your New Jekyll Site
 {% for post in site.posts %}
   <div class="col-md-4">
     <div class="content">
-    	<a href="{{ post.url }}">{{ post.title }}</a>
-    	<p>{{post.extra}}</p>
+    	<a href="{{ post.url }}">
+    	<img src="/images/{{post.image}}" class="img-responsive" alt=""></a>
     </div>
   </div>
 {% endfor %}
