--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Your New Jekyll Site
 <div id="project-grid" class="row">
   
 {% for post in site.posts %}
-  <div class="col-md-4">
+  <div class="col-sm-4">
     <div class="content">
     	<a href="{{ post.url }}">
     	<img src="/images/{{post.image}}" class="img-responsive" alt=""></a>
