--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Allison Siegel
 ---
 
 <div class="container">
-
+<div class="row col-md-8 col-md-offset-2">
 <!-- CAROUSEL -->
 <div class="carousel slide" data-ride="carousel">
 
@@ -41,5 +41,5 @@ title: Allison Siegel
 {% endfor %}
 
 </div>
-
+</div>
 </div>
