--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: Allison Siegel
   <div class="col-sm-4">
     <div class="content">
     	<a href="{{ post.url }}">
-    	<img src="/images/{{post.image}}" class="img-responsive" alt=""></a>
+    	<img src="/images/{{post.grid}}" class="img-responsive" alt=""></a>
     </div>
   </div>
 {% endfor %}
