fixing nav bar center and spacing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Allison Siegel
 ---
 
-<div class="row col-md-8 col-md-offset-2">
+<div class="col-md-8 col-md-offset-2">
 <!-- CAROUSEL -->
 <div class="carousel slide" data-ride="carousel">
 
